<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2023, RTE (http://www.rte-france.com)
    This Source Code Form is subject to the terms of the Mozilla Public
    License, v. 2.0. If a copy of the MPL was not distributed with this
    file, You can obtain one at http://mozilla.org/MPL/2.0/.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent</artifactId>
        <version>15</version>
        <relativePath/>
    </parent>

    <artifactId>powsybl-optimizer</artifactId>
    <version>0.8.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>PowSyBl Optimizer</name>
    <description>PowSyBl modules for optimal powerflow models</description>
    <url>https://www.powsybl.com</url>

    <licenses>
        <license>
            <name>Mozilla Public License, Version 2.0</name>
            <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/powsybl/powsybl-optimizer.git</connection>
        <developerConnection>scm:git:https://github.com/powsybl/powsybl-optimizer.git</developerConnection>
        <url>https://github.com/powsybl/powsybl-optimizer</url>
    </scm>

    <developers>
        <developer>
            <name>Nicolas PIERRE</name>
            <email>nicolas.pierre@artelys.com</email>
            <organization>Artelys</organization>
            <organizationUrl>https://www.artelys.com</organizationUrl>
        </developer>
        <developer>
            <name>Geoffroy JAMGOTCHIAN</name>
            <email>geoffroy.jamgotchian@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>https://www.rte-france.com</organizationUrl>
        </developer>
    </developers>

    <modules>
        <module>open-reac</module>
        <module>divergence-analyser</module>
    </modules>

    <properties>
        <java.version>17</java.version>
    </properties>

</project>